# jom_cli

./: Cargo.toml  README.md  rustfmt.toml
src/: distros_packages.ron  lib.rs  main.rs  prelude.rs
