[package]
name = "jom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jom_bin"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.82"
ron = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
termion = "3.0.0"
thiserror = "1.0.58"
